Building Ingresos Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Increase"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.firstforms.ThirdInitialFormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.firstforms.SecondInitialFormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.dashboard.DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.firstforms.FirstInitialFormActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
